--- a/lol.html
+++ b/lol.html
@@ -1,4 +1,5 @@
 <section>
+  <link rel="stylesheet" href="body {.css">
     <div class="isolate">
       <div class="noise">wip ••• working in process </div>
       <div class="overlay"></div>
